--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.14.1
 blinker==1.8.2
 click==8.1.8
 Flask==3.0.3
+Flask-Cors==5.0.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
 gunicorn==23.0.0
