--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,13 @@ venv/
 env/
 ENV/
 venv.bak/
+backend/.venv/
+backend/venv/
+frontend/node_modules/
+__pycache__/
+.git/
+.vscode/
+*.db  # For SQLite databases
 
 # Pytest / coverage
 .pytest_cache/
