--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,21 +1,40 @@
 alembic==1.14.1
 blinker==1.8.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
 click==8.1.8
+distlib==0.3.9
+exceptiongroup==1.2.2
+Faker==35.2.2
+filelock==3.16.1
 Flask==3.0.3
 Flask-Cors==5.0.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
-gunicorn==23.0.0
+idna==3.10
 importlib_metadata==8.5.0
 importlib_resources==6.4.5
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 Mako==1.3.10
 MarkupSafe==2.1.5
 packaging==25.0
+pipenv==2024.4.1
+platformdirs==4.3.6
+pluggy==1.5.0
 psycopg2-binary==2.9.10
+pytest==8.3.5
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
+requests==2.32.4
+six==1.17.0
 SQLAlchemy==2.0.43
+SQLAlchemy-serializer==1.4.12
+tomli==2.2.1
 typing_extensions==4.13.2
+urllib3==2.2.3
+virtualenv==20.30.0
+watchdog==4.0.2
 Werkzeug==3.0.6
 zipp==3.20.2
